--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
 body, html {
     margin: 0;
+    font-family: Consolas;
+}
+a {
+    color: white;
+    text-decoration: transparent underline;
+    transition: all 0.5s ease;
+}
+a:hover {
+    color: #9999FF;
+}
+.active {
+    color: #c0c0c0;
 }
